WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187617
Assert that the IPC::Connection is valid in Connection::dispatchMessage(Decoder&)
https://bugs.webkit.org/show_bug.cgi?id=187617
Summary
Assert that the IPC::Connection is valid in Connection::dispatchMessage(Decod...
Chris Dumez
Reported
2018-07-12 14:07:56 PDT
Assert that the IPC::Connection is valid in Connection::dispatchMessage(Decoder&) as m_client would be stale otherwise.
Attachments
Patch
(1.36 KB, patch)
2018-07-12 14:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-07-12 14:09:19 PDT
Created
attachment 344882
[details]
Patch
WebKit Commit Bot
Comment 2
2018-07-12 15:21:46 PDT
Comment on
attachment 344882
[details]
Patch Clearing flags on attachment: 344882 Committed
r233783
: <
https://trac.webkit.org/changeset/233783
>
WebKit Commit Bot
Comment 3
2018-07-12 15:21:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-07-12 15:23:46 PDT
<
rdar://problem/42140149
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug