Source/WebKit/Platform/IPC/Connection.cpp
@@ -936,6 +936,7 @@ void Connection::enqueueIncomingMessage(std::unique_ptr<Decoder> incomingMessage
 
 void Connection::dispatchMessage(Decoder& decoder)
 {
+    ASSERT(isValid());
     m_client.didReceiveMessage(*this, decoder);
 }
 
